--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">ThreeGoals</string>
+    <string name="app_name">3 Goals</string>
+    <string name="notification_channel_user_report_request_title">Daily report requests</string>
+    <string name="notification_channel_user_report_request_description">The notifications shown daily, asking to fulfill the questionnaire about the previous day. Vital for the app\'s functionality.</string>
+    <string name="notification_open_reporter_content_text">Tap here to add a daily report</string>
 </resources>
