--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -4,4 +4,12 @@
     <string name="notification_channel_user_report_request_title">Codzienne pytania o dzień poprzedni</string>
     <string name="notification_channel_user_report_request_description">Te notyfikacje wyświetlane są każdego nowego dnia. Proszą o wypełnienie ankiety dotyczącej dnia poprzedniego. Są kluczowe dla wygodnego użytkowania aplikacji.</string>
     <string name="notification_open_reporter_content_text">Kliknij aby dodać dzienny raport</string>
+
+    <string-array name="likert_textual_explanations">
+        <item>Zdecydowanie nie</item>
+        <item>Raczej nie</item>
+        <item>Ani nie, ani tak</item>
+        <item>Raczej tak</item>
+        <item>Zdecydowanie tak</item>
+    </string-array>
 </resources>
