--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="notification_channel_user_report_request_title">Daily report requests</string>
     <string name="notification_channel_user_report_request_description">The notifications shown daily, asking to fulfill the questionnaire about the previous day. Vital for the app\'s functionality.</string>
     <string name="notification_open_reporter_content_text">Tap here to add a daily report</string>
+    <string name="reporter_done_button_text">Done</string>
 
     <string-array name="likert_textual_explanations">
         <item>Strongly disagree</item>
