display correct default values on Reporter start
ReportFomrFragments are now assigned correct default values when
ReporterActivity is started.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
         <item>Agree</item>
         <item>Strongly agree</item>
     </string-array>
+
+    <string-array name="goal_titles">
+        <item>Goal Ⅰ</item>
+        <item>Goal Ⅱ</item>
+        <item>Goal Ⅲ</item>
+        <item>Goal \?</item>
+    </string-array>
 </resources>
