--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="notification_channel_user_report_request_description">The notifications shown daily, asking to fulfill the questionnaire about the previous day. Vital for the app\'s functionality.</string>
     <string name="notification_open_reporter_content_text">Tap here to add a daily report</string>
     <string name="reporter_done_button_text">done</string>
-    <string name="report_form_positives_title">Tap on + for each positive thing related to the endevour.</string>
+    <string name="report_form_positives_title">Tap on + for each positive thing related to the endeavour.</string>
     <string name="report_form_trying_hard_title">Do you agree that you\'ve tried as hard as you could?</string>
+    <string name="reporter_activity_error_select_values">Select values for every goal first.</string>
+    <string name="reporter_activity_message_reports_saved">Report saved. Thank you!</string>
 
     <string-array name="likert_textual_explanations">
         <item>Strongly disagree</item>
