add reports viewer UI
A DialogFragment with a list of days and status of those days ("has
report" or "missing report") was added.

DbHelper now has a method to fetch Day objects array, which groups
reports by days. Basic instrumented tests were added for the DbHelper.

--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -10,6 +10,9 @@
     <string name="reporter_activity_error_select_values">Wprowadź dane dla każdego celu.</string>
     <string name="reporter_activity_message_reports_saved">Raport zapisany. Miłego dnia!</string>
     <string name="reporter_activity_message_reports_updated">Zaktualizowano raport.</string>
+    <string name="reports_editor_title">Edytor raportów</string>
+    <string name="editor_report_status_submitted">raport zapisany</string>
+    <string name="editor_report_status_missing">brakujący raport</string>
 
     <string-array name="likert_textual_explanations">
         <item>Zdecydowanie nie</item>
