handle end of edition and creation of new one
A TopBarFragment was added, which handles displaying existing editions
to the user as well as displaying a message prompting the user to create
a new edition if none is currently going on. The fragment is making the
choice of the edition to show when the app starts up.

--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -19,6 +19,8 @@
     <string name="selection_buttons_delta">zmiana</string>
     <string name="selection_buttons_weekly">dni tyg.</string>
 
+    <string name="top_bar_message_start_new_edition">rozpocznij nową edycję</string>
+
     <string-array name="likert_textual_explanations">
         <item>Zdecydowanie nie</item>
         <item>Raczej nie</item>
